Add personal info

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <div id="about" class="header">
 	<div class="maskHeader"></div>
      	<div class="vert-text">
-			<h1>Jhon Budy</h1>
-			<h2>Web Developer &amp; Front End Designer</h2>
+			<h1>Yonglin Zhuo</h1>
+			<h2>Data Engineer &amp; Statistician</h2>
 			
 		</div>
     <div class="navbar-nav">
@@ -47,7 +47,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#about">Jhon Budy</a>
+          <a class="navbar-brand" href="#about">Yonglin Zhuo</a>
         </div>
         
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -83,8 +83,8 @@
         <div class="row">
            <div class="col-md-10 col-md-offset-1">
 			<div class="build about-content">
-				<p class="text-center">Hello, I&#39;m Jhon Budy. I&#39;m a web designer living in Yogyakarta, Indonesia - doing
-what I can to make the web a better place by designing stand out identities.</p>
+				<p class="text-center">Hello, I&#39;m Yonglin Zhuo. I&#39;m a data engineer living in Stockholm, Sweden - doing
+what I can to make the data tell interesting stories.</p>
 				
 			</div>
           </div><!-- end col -->
@@ -283,7 +283,7 @@ what I can to make the web a better place by designing stand out identities.</p>
 		<div class="row">
           <div class="col-md-10  col-md-offset-1">
 		    <div class="build title-page-white">
-				<h2 class="text-center">Get In Touch With Us</h2>	
+				<h2 class="text-center">Get In Touch With Me</h2>	
 				<span class="line-title"></span>
 			</div>
 		   </div><!-- end col -->
@@ -298,7 +298,7 @@ what I can to make the web a better place by designing stand out identities.</p>
 							<span class="fa fa-map-marker"></span>
 							</div>
 							<div class="cell-contact">
-							<p>Merapi Street no.43 Yogyakarta. Indonesia<p>
+							<p>Ericsson AB, Kista, Stockholm, Sweden<p>
 							</div>
 						</div>
 						</li>
@@ -308,7 +308,7 @@ what I can to make the web a better place by designing stand out identities.</p>
 							<span class="fa fa-phone"></span>
 							</div>
 							<div class="cell-contact">
-							<p>+824 2344 5602<p>
+							<p>+46 0707 3857 05<p>
 							</div>
 						</div>
 						</li>
@@ -318,7 +318,7 @@ what I can to make the web a better place by designing stand out identities.</p>
 							<span class="fa fa-envelope"></span>
 							</div>
 							<div class="cell-contact">
-							<p>jhonbudy@gmail.co.id</p>
+							<p>zhuoylin@gmail.com</p>
 							</div>
 						</div>
 						</li>
@@ -340,7 +340,7 @@ what I can to make the web a better place by designing stand out identities.</p>
         <div class="row">
 			<div class="col-md-4 ">
 				<div class="build cp-right">
-					<p>&copy; 2014 <a href="http://omahpsd.com">OmahPSD</a>. All Rights Reserved. </p>
+					<p>&copy; 2014 <a href="https://github.com/yonglin/">Yonglin</a>. All Rights Reserved. </p>
 				</div><!-- end build -->
 			</div><!-- end col -->
 			<div class="col-md-4 text-center">
@@ -351,9 +351,8 @@ what I can to make the web a better place by designing stand out identities.</p>
 			<div class="col-md-4 text-right">
 			<div class="build">
 			<ul class="list-inline">
-			<li><a href="#" class="socIcon" data-toggle="tooltip" title="Facebook" data-original-title="Facebook" data-gal='tooltip' data-placement="top"><i class="fa fa-facebook fa-2x"></i></a></li>
-			<li><a href="#" class="socIcon" data-toggle="tooltip" title="Twitter" data-original-title="Twitter" data-gal='tooltip' data-placement="top"><i class="fa fa-twitter fa-2x"></i></a></li>
-			<li><a href="#" class="socIcon" data-toggle="tooltip" title="Dribble" data-original-title="Dribble" data-gal='tooltip' data-placement="top"><i class="fa fa-dribbble fa-2x"></i></a></li>
+			<li><a href="facebook.com/yonglin.zhuo" class="socIcon" data-toggle="tooltip" title="Facebook" data-original-title="Facebook" data-gal='tooltip' data-placement="top"><i class="fa fa-facebook fa-2x"></i></a></li>
+			<li><a href="https://twitter.com/Yonglin_nk" class="socIcon" data-toggle="tooltip" title="Twitter" data-original-title="Twitter" data-gal='tooltip' data-placement="top"><i class="fa fa-twitter fa-2x"></i></a></li>
 			</ul>
 			</div>
 			</div>
