--- a/index.html
+++ b/index.html
@@ -351,9 +351,10 @@ what I can to make the data tell interesting stories.</p>
 			<div class="col-md-4 text-right">
 			<div class="build">
 			<ul class="list-inline">
+			<li><a href="cn.linkedin.com/in/yonglinzhuo" class="socIcon" data-toggle="tooltip" title="LinkedIn" data-original-title="LinkedIn" data-gal='tooltip' data-placement="top"><i class="fa fa-linkedin fa-2x"></i></a></li>
+			<li><a href="https://github.com/yonglin/" class="socIcon" data-toggle="tooltip" title="GitHub" data-original-title="GitHub" data-gal='tooltip' data-placement="top"><i class="fa fa-github fa-2x"></i></a></li>
 			<li><a href="facebook.com/yonglin.zhuo" class="socIcon" data-toggle="tooltip" title="Facebook" data-original-title="Facebook" data-gal='tooltip' data-placement="top"><i class="fa fa-facebook fa-2x"></i></a></li>
 			<li><a href="https://twitter.com/Yonglin_nk" class="socIcon" data-toggle="tooltip" title="Twitter" data-original-title="Twitter" data-gal='tooltip' data-placement="top"><i class="fa fa-twitter fa-2x"></i></a></li>
-			<li><a href="cn.linkedin.com/in/yonglinzhuo" class="socIcon" data-toggle="tooltip" title="LinkedIn" data-original-title="LinkedIn" data-gal='tooltip' data-placement="top"><i class="fa fa-linkedin fa-2x"></i></a></li>
 			</ul>
 			</div>
 			</div>
