delete the photos

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ what I can to make the data tell interesting stories.</p>
 		<div class="row">
           <div class="col-md-10  col-md-offset-1">
 		    <div class="build title-page-gray">
-				<h2 class="text-center">My Latest Work</h2>	
+				<h2 class="text-center">My Work</h2>	
 				<span class="line-title"></span>
 			</div>
 		   </div><!-- end col -->
@@ -108,11 +108,11 @@ what I can to make the data tell interesting stories.</p>
 		   <div class="col-md-12">
                 <div class="build">
                 <ul id="filterOptions" class="clearfix">
-                    <li class="cur"><a class="all btn btn-link linear" href="#">Web</a></li>
+                    <li class="cur"><a class="all btn btn-link linear" href="#">Data Science</a></li>
                     <li><span>/</span></li>
-                    <li><a class="mobile btn btn-link linear" href="#" >Mobile</a></li>
+                    <li><a class="mobile btn btn-link linear" href="#" >Web</a></li>
 					<li><span>/</span></li>
-                    <li><a class="ilustrator btn btn-link linear" href="#">Ilustrator</a></li> 
+                    <li><a class="ilustrator btn btn-link linear" href="#">Articles</a></li> 
                     
                 </ul>
                  </div>
