add change photos

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ what I can to make the data tell interesting stories.</p>
 						<a href="img/portfolio/github.PNG" data-gal="prettyPhoto[gallery2]" title="Open Projects"><img class="linear img-portfolio img-responsive" src="img/portfolio/github.PNG" alt="This Is Screenshot"></a>
 						<div class="link"><a href="https://github.com/yonglin">This Is GitHub Link</a></div>
 						<div class="folio-caption">
-					       <p>This is Folio Caption</p>
+					       <p>TThis Is Screenshot</p>
 					       </div>
 						</div>
 						</div>
@@ -153,7 +153,7 @@ what I can to make the data tell interesting stories.</p>
 						<a href="img/memect.PNG" data-gal="prettyPhoto[gallery2]" title="A Volunteer Project"><img class="linear img-portfolio img-responsive" src="img/portfolio/memect.PNG" alt="This Is Screenshot"></a>
 						<div class="link"><a href="http://memect.com/">This Is Homepage Link</a></div>
 						<div class="folio-caption">
-					       <p>This is Folio Caption</p>
+					       <p>This Is Screenshot</p>
 					       </div>
 						</div>
 						</div>
