--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ what I can to make the data tell interesting stories.</p>
 					<div class="portfolio-item">
 						<div class="thumbnail">
 						<div class="thumb-img">
-						<a href="img/portfolio/github.PNG" data-gal="prettyPhoto[gallery2]" title="Open Projects"><img class="linear img-portfolio img-responsive" src="img/portfolio/github.PNG" alt="This Is Screenshot"></a>
+						<a href="img/portfolio/github.PNG" data-gal="prettyPhoto[gallery2]" title="Open Projects"><img class="linear img-portfolio img-responsive" src="img/portfolio/github.PNG" alt="GitHub Repo"></a>
 						<div class="link"><a href="https://github.com/yonglin">This Is GitHub Link</a></div>
 						<div class="folio-caption">
 					       <p>TThis Is Screenshot</p>
@@ -150,26 +150,10 @@ what I can to make the data tell interesting stories.</p>
 					<div class="portfolio-item">
 						<div class="thumbnail">
 						<div class="thumb-img">
-						<a href="img/memect.PNG" data-gal="prettyPhoto[gallery2]" title="A Volunteer Project"><img class="linear img-portfolio img-responsive" src="img/portfolio/memect.PNG" alt="This Is Screenshot"></a>
+						<a href="img/memect.PNG" data-gal="prettyPhoto[gallery2]" title="A Volunteer Project"><img class="linear img-portfolio img-responsive" src="img/portfolio/memect.PNG" alt="MEMECT"></a>
 						<div class="link"><a href="http://memect.com/">This Is Homepage Link</a></div>
 						<div class="folio-caption">
 					       <p>This Is Screenshot</p>
-					       </div>
-						</div>
-						</div>
-					
-					</div>
-				</div>
-			</li>
-		   <li class="box" data-id="id-9" data-type="ilustrator">
-				<div class="folio-img build">
-					<div class="portfolio-item">
-						<div class="thumbnail">
-						<div class="thumb-img">
-						<a href="img/portfolio/p09-large.jpg" data-gal="prettyPhoto[gallery2]" title="This Is Image Title"><img class="linear img-portfolio img-responsive" src="img/portfolio/p09-large.jpg" alt="This Is Image"></a>
-						<div class="link"><a href="#">This Is Folio Link6</a></div>
-						<div class="folio-caption">
-					       <p>This is Folio Caption</p>
 					       </div>
 						</div>
 						</div>
